# cpv-il

./: .gitignore  README.md  environment.yml  pyproject.toml
crafting/gridworld/algorithms/: composite_dataset.py  cpv_experiment.py
crafting/gridworld/envs/: __init__.py  grid_affordance.py
crafting/gridworld/policies/: composite_delta_policy.py  composite_policy.py  gridworld_policies.py  task_embeddings_policy.py
crafting/scripts/: collect_composite_trajectories.py  collect_reference_trajectories.py  run_model_multitask_tensorboard.py
tests/: test_crafting.py
